@@ -12,6 +12,8 @@ ChangeLog
 
 1.3.2 2011-??-??
 ========
+ * adds 30 seconds timeout to "compiling" flag
+ * decompiler: improves decompiling
  * disassembler: DECLARE_INHERITED_CLASS/DELAYED class not found
  * disassembler: don't dump builtin functions
  * fix win32 build against win32 native gnu tools
